# NeoZygisk

./: .clang-format  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
gradle/: libs.versions.toml
loader/: build.gradle.kts
loader/src/: CMakeLists.txt
loader/src/common/: daemon.cpp  dl.cpp  elf_util.cpp  files.cpp  misc.cpp  socket_utils.cpp
loader/src/include/: api.hpp  daemon.h  daemon.hpp  elf_util.hpp  files.hpp  logging.hpp  misc.hpp  socket_utils.hpp  solist.hpp
loader/src/injector/: art_method.hpp  clean.cpp  entry.cpp  gen_jni_hooks.py  hook.cpp  jni_hooks.hpp  module.cpp  module.hpp  mount.cpp  unmount.cpp  zygisk.hpp
loader/src/ptracer/: main.cpp  monitor.cpp  ptracer.cpp  utils.cpp  utils.hpp
module/: build.gradle.kts
module/src/: action.sh  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh  zygisk-ctl.sh
zygiskd/: Cargo.toml  build.gradle.kts
zygiskd/src/: companion.rs  constants.rs  dl.rs  main.rs  utils.rs  zygiskd.rs
zygiskd/src/root_impl/: apatch.rs  mod.rs
